# Asp-Maze-Gen-and-solve-

./: LICENSE  README.md
asp-generator/: maze.lp  maze_gen.py
asp-solver/: atoms.lp  atoms_solved.lp  help.txt  input.lp  maze.lp  solve_maze.sh
benchmarker/: analysis.ipynb  backtrack.c  benchmark.py  countFeatures.lp  kruskal.c  prim.c
maze-viz/: CMakeLists.txt  answerSetParser.c  answerSetParser.h  main.c  maze-core.lp  maze.lp  mazeApp.h  mazeConverts.c  mazeViz.c  maze_solver.lp  run.sh  test.c
